<resources>
    <string name="app_name">MudtCliente</string>

    <string name="base_url">http://69.167.152.217:8080/MudanzasJavaEnvironment/rest/</string>
    <string name="image_url">http://69.167.152.217:8080/MudanzasJavaEnvironment/gxobject</string>
    <!--<string name="base_url">http://apps4.genexus.com/Id21b4136c2f00070128c02859500699ab/rest/</string>-->

    <string name="copy_a">© 2016 TRANSPORTES ALIQUAM.</string>
    <string name="copy_b">Todos los derechos reservados.</string>
    <string name="splash_operator">Operador</string>
    <string name="splash_btn">INICIAR SESIÓN</string>
    <string name="login_sub">Empezar con las mudanzas</string>
    <string name="edit_user_hint">CORREO ELÉCTRONICO</string>
    <string name="edit_pass_hint">CONTRASEÑA</string>
    <string name="forget_pass">¿Olvidaste tu contraseña?</string>
    <string name="next_mudt">PRÓXIMAS MUDANZAS</string>
    <string name="info_row">INFO VIAJE</string>
    <string name="menu_prox">Próximas mudanzas</string>
    <string name="menu_his">Historial</string>
    <string name="menu_sol">Solicitudes</string>
    <string name="menu_sub_sol">No existen para tu unidad</string>
    <string name="menu_guia">Guía de operador</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_close">Cerrar Sesión</string>
    <string name="resum">Resúmen de mudanza</string>
    <string name="detail_ubc">Origen</string>
    <string name="piso">Piso del inmueble</string>
    <string name="elevador">Elevador de carga</string>
    <string name="desc">Descripción de mobiliario</string>
    <string name="detail_ubc_b">Destino</string>
    <string name="aprox">Costo</string>
    <string name="btn_init">INICIAR PROCESO</string>
    <string name="hist_muds">HISTORIAL DE MUDANZAS</string>
    <!--<string name="MAP_API">AIzaSyDpbgp6w7PXROQzRnZX1P1Sd_9P3V85ucw</string>-->
    <string name="MAP_API">AIzaSyBz1c8gfZux51tLfdYrJF3ybkzIYpVT2Pk</string>
    <string name="mud_pross">Mundanza en proceso</string>
    <string name="init_mud_btn">EMPEZAR MUDANZA</string>
    <string name="end_mud_btn">FINALIZAR MUDANZA</string>
    <string name="help">¿Ayuda?</string>
    <string name="ok_dialog">ENVIAR</string>
    <string name="sols_muds">PRÓXIMAS MUDANZAS DISPONIBLES</string>
    <string name="sol_btn">SOLICITUD</string>
    <string name="acp_sol">ACEPTAR SOLICITUD</string>
    <string name="recover_title">Recuperar contraseña</string>
    <string name="recover_hint">Usuario</string>
    <string name="cancel">Cancelar</string>
    <string name="recovery">Recuperar</string>
    <string name="splash_btn_reg">Regístrate</string>
    <string name="reg_title">Crear cuenta</string>
    <string name="reg_sub">Bienvenido a Mudanzas MX</string>
    <string name="name_hint">Nombre(s)</string>
    <string name="ap_hint">Apellido Paterno</string>
    <string name="email_hint">Correo eléctronico</string>
    <string name="lada_hint">Lada</string>
    <string name="movil_hint">Móvil</string>
    <string name="pass_hint">Contraseña</string>
    <string name="regis_btn">Regístrate</string>
    <string name="footA">Al registrarte confirmas que leiste y aceptaste</string>
    <string name="footB">terminos y condiciones de uso</string>
    <string name="regis_title">Regístrate</string>
    <string name="apm_hint">Apellido Materno</string>
    <string name="user_hint">Usuario</string>
    <string name="menu_solis">Solicitar</string>
    <string name="menu_mi_mud">Mis mudanzas</string>
    <string name="menu_guia_mud">Guía de mudanza</string>
    <string name="init_point">Punto de partida</string>
    <string name="end_point">Punto de descarga</string>
    <string name="req_btn">Requisitos mudanza</string>
    <string name="info_map">Recuerda que la ruta puede cambiar debido al tráfico y tipo de camión solicitado.</string>
    <string name="init_mud_txt">¿Como será tu mudanza?</string>
    <string name="init_mud_pp">PUNTO DE PARTIDA</string>
    <string name="init_mud_ub_ini">Ubicación de recogida</string>
    <string name="piso_carga">Piso del inmueble</string>
    <string name="elev_carga">Elevador de carga</string>
    <string name="piso_carga_hint">Planta baja</string>
    <string name="fecha">Hora y día de carga</string>
    <string name="pass_confirm_hint">Confirma tu contraseña</string>
    <string name="moths_title">Selecciona el mes</string>
    <string name="mudt_desc">Descripción de mobiliario</string>
    <string name="mudt_desc_hint">Que tipo de inmueble contiene...</string>
    <string name="end_mud_pp">PUNTO DE LLEGADA</string>
    <string name="init_mud_ub_end">Ubicación de descarga</string>
    <string name="solic_btn">Solicitar mudanza</string>
    <string name="elevator_have">¿Tiene elevador?</string>
    <string name="elev_carga_hint">¿Tiene elevador?</string>
    <string name="btn_confirm">CONFIRMAR SOLICITUD</string>
    <string name="menu_pago">Pago</string>
    <string name="his_act">Mudanzas actuales</string>
    <string name="his_ant">Mudanzas anteriores</string>
    <string name="pago_1">MÉTODOS DE PAGO</string>
    <string name="pago_2">Sólo te falta agregar tu forma de pago</string>
    <string name="pago_3">Ingresa una tarjeta para futuras mudanzas</string>
    <string name="pago_btn">Agregar tarjeta de crédito o débito</string>
    <string name="pago_dialog_1">Número de tarjeta</string>
    <string name="pago_dialog_2">Fecha de vto.</string>
    <string name="pago_dialog_3">CVV</string>
    <string name="pago_dialog_4">País</string>
    <string name="add">Agregar</string>
    <string name="pago_dialog_5">Nombre del titular</string>
    <string name="add_target">Agregar tarjeta</string>
    <string name="pagar">Pendiente de pago</string>
    <string name="pross_mud">MUDANZAS EN PROCESO</string>
    <string name="desing">Su mudanza aun no ha sido aprobada</string>
    <string name="curso">En curso</string>
    <string name="cancelado">Cancelada</string>
    <string name="concluido">Concluida</string>
    <string name="pagada">Pagada</string>
    <string name="pendiente">Pendiente por aceptar</string>
    <string name="operador">Asignado</string>
    <string name="in_process">En proceso</string>
    <string name="finished">Terminadas</string>
    <string name="detail">Detalle</string>
</resources>
