<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_icons">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.mudtusuario.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_title"
                android:textColor="@color/primary_text"
                android:textSize="35sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="15dp"/>

            <com.mudtusuario.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:text="@string/reg_sub"
                android:layout_gravity="center"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/avatar_cliente_empty"
                android:layout_gravity="center"
                android:layout_margin="25dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <com.mudtusuario.custom.CustomEditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/user_hint"
                    android:textColor="@color/primary_text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <com.mudtusuario.custom.CustomEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/name_hint"
                    android:textColor="@color/primary_text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <com.mudtusuario.custom.CustomEditText
                    android:id="@+id/app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/ap_hint"
                    android:textColor="@color/primary_text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_apm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <com.mudtusuario.custom.CustomEditText
                    android:id="@+id/apm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/apm_hint"
                    android:textColor="@color/primary_text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <com.mudtusuario.custom.CustomEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"
                    android:textColor="@color/primary_text"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_lada"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp">

                    <com.mudtusuario.custom.CustomEditText
                        android:id="@+id/lada"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/lada_hint"
                        android:textColor="@color/primary_text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_movil"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp">

                    <com.mudtusuario.custom.CustomEditText
                        android:id="@+id/movil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/movil_hint"
                        android:textColor="@color/primary_text"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <com.mudtusuario.custom.CustomEditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/pass_hint"
                    android:textColor="@color/primary_text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pass_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <com.mudtusuario.custom.CustomEditText
                    android:id="@+id/pass_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/pass_confirm_hint"
                    android:textColor="@color/primary_text"/>

            </android.support.design.widget.TextInputLayout>

            <com.mudtusuario.custom.CustomButton
                android:id="@+id/regis_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:textColor="@color/text_icons"
                android:text="@string/regis_btn"
                android:textSize="25sp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:elevation="5dp"/>

            <com.mudtusuario.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/footA"
                android:textColor="@color/primary_text"
                android:textAppearance="?android:attr/textAppearance"
                android:layout_gravity="center|bottom"
                android:gravity="center|bottom"
                android:layout_marginTop="15dp"/>

            <com.mudtusuario.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/footB"
                android:textColor="@color/accent_color"
                android:textAppearance="?android:attr/textAppearance"
                android:layout_gravity="center|bottom"
                android:gravity="center|bottom"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>