<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_icons">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_color"
        android:layout_gravity="center">

        <com.mudtusuario.custom.CustomTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_icons"
            android:padding="15dp"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/recover_title"/>

    </FrameLayout>

    <com.mudtusuario.custom.CustomEditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/primary_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:hint="@string/recover_hint"
        android:textColorHint="@color/secondary_text"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_margin="5dp">

        <com.mudtusuario.custom.CustomButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/accent_color"
            android:text="@string/cancel"/>

        <com.mudtusuario.custom.CustomButton
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/accent_color"
            android:text="@string/recovery"
            android:layout_marginLeft="25dp"/>

    </LinearLayout>

</LinearLayout>