<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_icons">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@color/little_gray">

        <com.mudtusuario.custom.CustomTextView
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:textColor="@color/gris_app"
            android:text="@string/add_target"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageView
                android:visibility="gone"
                android:id="@+id/target_type"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:src="@drawable/domy_mc"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"/>

        </FrameLayout>

    </LinearLayout>

    <com.mudtusuario.custom.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@color/gris_app"
        android:text="@string/pago_dialog_5"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"/>

    <com.mudtusuario.custom.CustomEditText
        android:id="@+id/titular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rect"
        android:textColor="@color/accent_color"
        android:padding="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="15dp"
        android:inputType="textCapWords"/>

    <com.mudtusuario.custom.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@color/gris_app"
        android:text="@string/pago_dialog_1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <com.mudtusuario.custom.CustomEditText
        android:id="@+id/tarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rect"
        android:textColor="@color/accent_color"
        android:padding="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="15dp"
        android:inputType="number"
        android:maxLength="16"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="5dp">

            <com.mudtusuario.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="@color/gris_app"
                android:text="@string/pago_dialog_2"/>

            <com.mudtusuario.custom.CustomEditText
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rect"
                android:textColor="@color/accent_color"
                android:padding="5dp"
                android:inputType="number"
                android:maxLength="5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <com.mudtusuario.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="@color/gris_app"
                android:text="@string/pago_dialog_3"/>

            <com.mudtusuario.custom.CustomEditText
                android:id="@+id/cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rect"
                android:textColor="@color/accent_color"
                android:padding="5dp"
                android:inputType="number"
                android:maxLength="3"/>

        </LinearLayout>

    </LinearLayout>

    <com.mudtusuario.custom.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@color/gris_app"
        android:text="@string/pago_dialog_4"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <com.mudtusuario.custom.CustomEditText
        android:id="@+id/pais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rect"
        android:textColor="@color/accent_color"
        android:padding="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="15dp"
        android:inputType="textCapWords"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:gravity="right">

        <Button
            android:id="@+id/cancel"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:textColor="@color/accent_color"
            android:text="@string/cancel"
            android:background="@color/text_icons"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/add"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:textColor="@color/accent_color"
            android:text="@string/add"
            android:background="@color/text_icons"/>

    </LinearLayout>

</LinearLayout>