<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_icons">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.mudtusuario.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_btn"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/primary_text"
                android:layout_marginTop="30dp"/>

            <com.mudtusuario.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_sub"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/secondary_text"
                android:layout_marginBottom="30dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/teaser_inpunt_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp">

                <com.mudtusuario.custom.CustomEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editUser"
                    android:hint="@string/edit_user_hint"
                    android:descendantFocusability="beforeDescendants"
                    android:imeOptions="actionNext|flagNavigateNext"
                    android:inputType="text"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/teaser_inpunt_lay0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp">

                <com.mudtusuario.custom.CustomEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editPass"
                    android:hint="@string/edit_pass_hint"
                    android:imeOptions="actionSend"
                    android:maxLines="1"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"/>

            </android.support.design.widget.TextInputLayout>

            <com.mudtusuario.custom.CustomButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:textColor="@color/text_icons"
                android:text="@string/splash_btn"
                android:textSize="25sp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:elevation="5dp"/>

            <com.mudtusuario.custom.CustomTextView
                android:id="@+id/forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pass"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/primary_color"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>